--- a/index.html
+++ b/index.html
@@ -15,16 +15,186 @@
         <div id="menu" class="fas fa-bars"></div>
         <nav class="navbar">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Skills</a></li>
-                <li><a href="#">Education</a></li>
-                <li><a href="#">Work</a></li>
-                <li><a href="#">Experience</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#education">Education</a></li>
+                <li><a href="#work">Work</a></li>
+                <li><a href="#experience">Experience</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
+    <main>
+        <section class="home" id="home">
+            <div class="content">
+                <h1>Hi There,<br> I'm <span>GOPINATH MUNUSAMY</span></h1>
+                <p>I am into <span class="typing-text"></span></p>
+                <a href="#about" class="btn"><span>About Me</span>
+                    <i class="fas fa-arrow-circle-down"></i>
+                </a>
+                <div class="social">
+                    <ul class="social-icons">
+                        <li>
+                            <a href="https://www.linkedin.com/in/gopinath-munusamy-35676617b/" class="linkedin">
+                                <i class="fab fa-linkedin"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/Gopinath033" class="github">
+                                <i class="fab fa-github"></i>
+                            </a>  
+                        </li>
+                        <li>
+                            <a href="" class="twitter">
+                                <i class="fab fa-twitter"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="" class="telegram">
+                                <i class="fab fa-telegram-plane"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="" class="instagram">
+                                <i class="fab fa-instagram" target="_blank"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="" class="dev">
+                                <i class="fab fa-dev"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="image">
+                    <img src="./assets/images/hero.png" alt="" class="tilt" draggable="false">
+                </div>
+            </div>
+        </section>
+        <section class="about" id="about">
+            <h1><i class="fas fa-user-alt"></i>About <span>Me</span></h1>
+            <div class="row">
+                <div class="image">
+                    <img src="./assets/images/hero.png" alt="" class="tilt" draggable="false">
+                </div>
+                <div class="content">
+                    <h3>I'm Gopi</h3>
+                    <span class="tag">Full stack Developer</span>
+                    <p>2 years of software development experience, I specialize in React.js, Node.js, .NET, C#, HTML, CSS, JavaScript, C#, Angular and Vue. • At Syncfusion Software Pvt Ltd, I was responsible for feature implementation, UX design, and bug fixing, particularly for the Gantt component. • I have strong skills in full-stack development, using React.js for dynamic UIs and Node.js for scalable backend solutions. • My career goal is to continue building impactful, user-focused applications.</p>
+                    <div class="box-container">
+                        <div class="box">
+                            <p><span>Email-Id : </span> gopi.messi33@gmail.com</p>
+                            <p><span>Place : </span> Kanchipuram, Tamilnadu - 603406.</p>
+                        </div>
+                    </div>
+                    <div class="resumebtn">
+                        <a href="#" class="btn"><span>Resume</span>
+                            <i class="fas fa-chevron-right"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="skills" id="skills">
+            <h1 class="heading">
+                <i class="fas fa-laptop-code"></i> Skills & <span>Abilities</span>
+            </h1>
+            <div class="container">
+                <div class="row" id="skillsConatiner"></div>
+            </div>
+        </section>
+        <section class="education" id="education">
+            <h1 class="heading">
+                <i class="fas fa-graduation-cap"> My <span>Education</span></i>
+            </h1>
+            <p class="qoute">Education is not the learning of facts, but the training of the mind to think.</p>
+            <div class="box-container">
+                <div class="box">
+                    <div class="image">
+                        <img src="" alt="">
+                    </div>
+                    <div class="content">
+                        <h3>Bachelor Of Engineering in Electronics and Communication</h3>
+                        <p>Adhiparasakthi Engineering College, Melmaruvathur</p>
+                        <h4>2016 - 2020 | Completed</h4>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="image">
+                        <img src="" alt="">
+                    </div>
+                    <div class="content">
+                        <h3>HSC in Biology Mathematics</h3>
+                        <p>Meenakshi Ammal Matriculation Higher Secondary School, Uthiramerur</p>
+                        <h4>2015 - 2016 | Completed</h4>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="work" id="work">
+            <h2 class="heading">
+                <i class="fas fa-laptop-code"></i> Projects <span>Made</span>
+                <div class="box-container">
+
+                </div>
+            </h2>
+        </section>
+        <section class="experience" id="experience">
+
+        </section>
+        <section class="contact" id="contact">
+            <h2 class="heading">
+                <i class="fas fa-headset"></i> Get In <span>Touch</span>
+            </h2>
+            <div class="container">
+                <div class="content">
+                    <form action="" class="contact-group">
+                        <div class="form-group">
+                            <div class="field">
+                                <i class='fas fa-user'></i>
+                                <input type="text" name="name" placeholder="Name" required>
+                            </div>
+                            <div class="field">
+                                <i class='fas fa-envelope'></i>
+                                <input type="email" name="email" placeholder="Email" required >
+                            </div>
+                            <div class="field">
+                                <i class='fas fa-phone-alt'></i>
+                                <input type="tel" name="phone" placeholder="Phone" >
+                            </div>
+                            <div class="message">
+                                <i class="fas fa-comment-dots"></i>
+                                <textarea name="message" placeholder="Message" required></textarea>
+                            </div>
+                        </div>
+                        <div class="button-area">
+                            <button type="submit">
+                              Submit <i class="fa fa-paper-plane"></i></button>
+                          </div>
+                    </form>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div class="box-container">
+            <div class="box">
+                <h3>Jigar's Portfolio</h3>
+                <p>Thank you for visiting my personal portfolio website. Connect with me over socials. <br/> <br/> Keep Rising 🚀. Connect with me over live chat!</p>
+            </div>
+      
+            <div class="box">
+                <h3>quick links</h3>
+                <a href="#home"><i class="fas fa-chevron-circle-right"></i> home</a>
+                <a href="#about"><i class="fas fa-chevron-circle-right"></i> about</a>
+                <a href="#skills"><i class="fas fa-chevron-circle-right"></i> skills</a>
+                <a href="#education"><i class="fas fa-chevron-circle-right"></i> education</a>
+                <a href="#work"><i class="fas fa-chevron-circle-right"></i> work</a>
+                <a href="#experience"><i class="fas fa-chevron-circle-right"></i> experience</a>
+            </div>
+        </div>
+    </footer>
     
 </body>
 </html>
