--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <header>
+        
         <a href="" class="logo">
+            <img src="./assets/images/logo.png" alt="">
             <i class="fa-sharp fa-solid fa">GOPI</i>
         </a>
         <div id="menu" class="fas fa-bars"></div>
@@ -28,12 +30,12 @@
     <main>
         <section class="home" id="home">
             <div class="content">
-                <h1>Hi There,<br> I'm <span>GOPINATH MUNUSAMY</span></h1>
+                <h2>Hi There,<br> I'm <span>GOPINATH MUNUSAMY</span></h2>
                 <p>I am into <span class="typing-text"></span></p>
                 <a href="#about" class="btn"><span>About Me</span>
                     <i class="fas fa-arrow-circle-down"></i>
                 </a>
-                <div class="social">
+                <div class="socials">
                     <ul class="social-icons">
                         <li>
                             <a href="https://www.linkedin.com/in/gopinath-munusamy-35676617b/" class="linkedin">
@@ -46,17 +48,17 @@
                             </a>  
                         </li>
                         <li>
-                            <a href="" class="twitter">
+                            <a href="https://x.com/Gopi70720873" class="twitter">
                                 <i class="fab fa-twitter"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="" class="telegram">
+                            <a href="https://t.me/gopinath33M" class="telegram">
                                 <i class="fab fa-telegram-plane"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="" class="instagram">
+                            <a href="https://www.instagram.com/gopi_messi/" class="instagram">
                                 <i class="fab fa-instagram" target="_blank"></i>
                             </a>
                         </li>
@@ -67,9 +69,9 @@
                         </li>
                     </ul>
                 </div>
-                <div class="image">
-                    <img src="./assets/images/hero.png" alt="" class="tilt" draggable="false">
-                </div>
+            </div>
+            <div class="image">
+                <img src="./assets/images/gopi.png" alt="" class="tilt" draggable="false">
             </div>
         </section>
         <section class="about" id="about">
