updated about, skills, education and contact section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Gopinath_Munusamy_Portfolio</title>
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <script defer src="./index.js"></script>
 </head>
 <body>
     <header>
@@ -75,15 +76,15 @@
             </div>
         </section>
         <section class="about" id="about">
-            <h1><i class="fas fa-user-alt"></i>About <span>Me</span></h1>
+            <h2 class="heading"><i class="fas fa-user-alt"></i>About <span>Me</span></h2>
             <div class="row">
-                <div class="image">
+                <!-- <div class="image">
                     <img src="./assets/images/hero.png" alt="" class="tilt" draggable="false">
-                </div>
+                </div> -->
                 <div class="content">
                     <h3>I'm Gopi</h3>
                     <span class="tag">Full stack Developer</span>
-                    <p>2 years of software development experience, I specialize in React.js, Node.js, .NET, C#, HTML, CSS, JavaScript, C#, Angular and Vue. • At Syncfusion Software Pvt Ltd, I was responsible for feature implementation, UX design, and bug fixing, particularly for the Gantt component. • I have strong skills in full-stack development, using React.js for dynamic UIs and Node.js for scalable backend solutions. • My career goal is to continue building impactful, user-focused applications.</p>
+                    <p>with 2 years of experience in software development, I specialize in building dynamic and scalable applications using React.js, Node.js, Angular, HTML, CSS, and JavaScript. During my tenure at <b>Syncfusion Software Pvt Ltd</b>, I contributed to feature development, UX design, and bug fixing, primarily focusing on enhancing the Gantt component. My expertise lies in full-stack development, crafting interactive user interfaces with React.js and developing robust backend solutions with Node.js. Passionate about creating user-centric applications, I aim to build innovative and impactful software solutions.</p>
                     <div class="box-container">
                         <div class="box">
                             <p><span>Email-Id : </span> gopi.messi33@gmail.com</p>
@@ -91,7 +92,7 @@
                         </div>
                     </div>
                     <div class="resumebtn">
-                        <a href="#" class="btn"><span>Resume</span>
+                        <a href="https://drive.google.com/file/d/1XBr4JK3iYuRfb6ZonOELI2fRhAMYtMpJ/view?usp=sharing" target="_blank" class="btn"><span>Resume</span>
                             <i class="fas fa-chevron-right"></i>
                         </a>
                     </div>
@@ -103,7 +104,7 @@
                 <i class="fas fa-laptop-code"></i> Skills & <span>Abilities</span>
             </h1>
             <div class="container">
-                <div class="row" id="skillsConatiner"></div>
+                <div class="row" id="skillsContainer"></div>
             </div>
         </section>
         <section class="education" id="education">
@@ -114,7 +115,7 @@
             <div class="box-container">
                 <div class="box">
                     <div class="image">
-                        <img src="" alt="">
+                        <img src="./assets/images/apec_college.jpg" alt="">
                     </div>
                     <div class="content">
                         <h3>Bachelor Of Engineering in Electronics and Communication</h3>
@@ -124,7 +125,7 @@
                 </div>
                 <div class="box">
                     <div class="image">
-                        <img src="" alt="">
+                        <img src="./assets/images/mamhss.webp" alt="">
                     </div>
                     <div class="content">
                         <h3>HSC in Biology Mathematics</h3>
@@ -179,10 +180,10 @@
             </div>
         </section>
     </main>
-    <footer>
+    <section class="footer">
         <div class="box-container">
             <div class="box">
-                <h3>Jigar's Portfolio</h3>
+                <h3>Gopi's Portfolio</h3>
                 <p>Thank you for visiting my personal portfolio website. Connect with me over socials. <br/> <br/> Keep Rising 🚀. Connect with me over live chat!</p>
             </div>
       
@@ -195,8 +196,22 @@
                 <a href="#work"><i class="fas fa-chevron-circle-right"></i> work</a>
                 <a href="#experience"><i class="fas fa-chevron-circle-right"></i> experience</a>
             </div>
+
+            <div class="box">
+          <h3>contact info</h3>
+          <p> <i class="fas fa-phone"></i>+91-6380715948</p>
+          <p> <i class="fas fa-envelope"></i>gopi.messi33@gmail.com</p>
+          <p> <i class="fas fa-map-marked-alt"></i>Kanchipuram, Tamil Nadu, India</p>
+          <div class="share">
+
+              <a href="https://www.linkedin.com/in/jigar-sable" class="fab fa-linkedin" aria-label="LinkedIn" target="_blank"></a>
+              <a href="https://github.com/jigar-sable" class="fab fa-github" aria-label="GitHub" target="_blank"></a>
+              <a href="mailto:jigarsable21@gmail.com" class="fas fa-envelope" aria-label="Mail" target="_blank"></a>
+              <a href="https://twitter.com/jigar_sable" class="fab fa-twitter" aria-label="Twitter" target="_blank"></a>
+              <a href="https://t.me/lifecode5" class="fab fa-telegram-plane" aria-label="Telegram" target="_blank"></a>
+          </div>
+      </div>
         </div>
-    </footer>
-    
+    </section >
 </body>
 </html>
