--- a/index.html
+++ b/index.html
@@ -204,11 +204,11 @@
           <p> <i class="fas fa-map-marked-alt"></i>Kanchipuram, Tamil Nadu, India</p>
           <div class="share">
 
-              <a href="https://www.linkedin.com/in/jigar-sable" class="fab fa-linkedin" aria-label="LinkedIn" target="_blank"></a>
-              <a href="https://github.com/jigar-sable" class="fab fa-github" aria-label="GitHub" target="_blank"></a>
-              <a href="mailto:jigarsable21@gmail.com" class="fas fa-envelope" aria-label="Mail" target="_blank"></a>
-              <a href="https://twitter.com/jigar_sable" class="fab fa-twitter" aria-label="Twitter" target="_blank"></a>
-              <a href="https://t.me/lifecode5" class="fab fa-telegram-plane" aria-label="Telegram" target="_blank"></a>
+              <a href="https://www.linkedin.com/in/gopinath-munusamy-35676617b/" class="fab fa-linkedin" aria-label="LinkedIn" target="_blank"></a>
+              <a href="https://github.com/Gopinath033" class="fab fa-github" aria-label="GitHub" target="_blank"></a>
+              <a href="mailto:gopi.messi33@gmail.com" class="fas fa-envelope" aria-label="Mail" target="_blank"></a>
+              <a href="https://x.com/Gopi70720873" class="fab fa-twitter" aria-label="Twitter" target="_blank"></a>
+              <a href="https://t.me/gopinath33M" class="fab fa-telegram-plane" aria-label="Telegram" target="_blank"></a>
           </div>
       </div>
         </div>
